<resources>
    <string name="app_name">ControlAsistencias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CONTROL DE PERSONAL</string>
    <string name="nav_header_subtitle">GRUPO G</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_salir">Salir</string>

    <string name="menu_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_leaves">Mis Solicitudes</string>
    <string name="menu_location">Registrar Ubicación</string>
    <string name="menu_notifications">Mis Notificaciones</string>
    <string name="menu_datos">Datos</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="menu_registroasistencia">Registro de Asistencia</string>
    <string name="menu_registrarsolicitud">Registrar Solicitud</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_soporte">Soporte</string>
    <string name="menu_carneempleado">Carne Empleado</string>
    <string name="menu_asistencia">Asistencia</string>
    <string name="menu_marcarasistencia">Marcar Asistencia</string>

    <string-array name="type_array">
        <item>Licencia Ocasional</item>
        <item>Licencia por Salud</item>
        <item>Vacaciones</item>
        <item>Otros</item>
    </string-array>

    <string-array name="manager_array">
        <item>Jesus Rojas</item>
        <item>Luis Ramirez</item>
        <item>Marco Perez</item>
    </string-array>
</resources>