<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_leaves" android:icon="@drawable/ic_reorder" android:title="@string/menu_leaves" />

        <item android:id="@+id/nav_location" android:icon="@drawable/ic_outline_gps_fixed" android:title="@string/menu_location" />

        <item android:id="@+id/nav_registrarsolicitud" android:icon="@drawable/registrarsolicitud" android:title="@string/menu_registrarsolicitud" />
        <item android:id="@+id/nav_notifications" android:icon="@drawable/ic_notifications" android:title="@string/menu_notifications" />

        <item android:id="@+id/nav_datos" android:icon="@drawable/datos" android:title="@string/menu_datos" />

        <item
            android:id="@+id/nav_carneempleado"
            android:icon="@drawable/carnet"
            android:title="@string/menu_carneempleado" />

        <item android:id="@+id/nav_configuracion" android:icon="@drawable/configuracion" android:title="@string/menu_configuracion" />

        <item android:id="@+id/nav_soporte" android:icon="@drawable/soporte" android:title="@string/menu_soporte" />


    </group>
</menu>