<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_leaves">
    <fragment
        android:id="@+id/nav_leaves"
        android:name="pe.upc.controlasistencias.ui.leaves.LeaveListFragment"
        android:label="@string/menu_leaves"
        tools:layout="@layout/fragment_leave_list_list" />

    <fragment
        android:id="@+id/nav_location"
        android:name="pe.upc.controlasistencias.ui.location.MapsActivityCurrentPlace"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/nav_registrarsolicitud"
        android:name="pe.upc.controlasistencias.ui.registrarsolicitud.RegistrarsolicitudFragment"
        android:label="@string/menu_registrarsolicitud"
        tools:layout="@layout/registrarsolicitud_fragment" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="pe.upc.controlasistencias.ui.notifications.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification_list" />

    <fragment
        android:id="@+id/nav_datos"
        android:name="pe.upc.controlasistencias.ui.datosempleado.DatosFragment"
        android:label="@string/menu_datos"
        tools:layout="@layout/fragment_datos" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="pe.upc.controlasistencias.ui.configuracion.configuracion_Fragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/configuracion__fragment" />

    <fragment
        android:id="@+id/nav_soporte"
        android:name="pe.upc.controlasistencias.ui.soporte.soporte_Fragment"
        android:label="@string/menu_soporte"
        tools:layout="@layout/soporte__fragment" />



</navigation>